Implement: User management

--- a/CourseManagement/appsettings.json
+++ b/CourseManagement/appsettings.json
@@ -7,6 +7,7 @@
     },
     "AllowedHosts": "*",
     "WebTimeOut": 60,
+    "TimeoutForCookieRememberPassword": 43200,
     "PageLengths": "10,25,50,100",
     "ClientVersion": "20240603",
     "ConnectionStrings": {
