--- a/CourseManagement/appsettings.json
+++ b/CourseManagement/appsettings.json
@@ -9,15 +9,8 @@
     "WebTimeOut": 60,
     "TimeoutForCookieRememberPassword": 43200,
     "PageLengths": "10,25,50,100",
-    "ClientVersion": "20240603",
+    "ClientVersion": "20241211",
     "ConnectionStrings": {
-        "DbConnection": "Server=157.10.198.67;Database=DB_CourseManagement;uid=sa;password=6ki3gHGC9bwMuY3AJu8i;TrustServerCertificate=True;MultipleActiveResultSets=true;"
-    },
-    "ApplicationInfo": {
-        "CompanyName": "CÔNG TY TNHH MTV TIỀN THUẬN PHONG",
-        "TaxCode": "2100682688",
-        "Address": "76 Quang Trung, khóm 3, phường 1",
-        "PhoneNumber": "02943856384",
-        "Director": "Lý Triệu Phong"
+        "DbConnection": "Server=.;Database=DB_CourseManagement;uid=sa;password=6ki3gHGC9bwMuY3AJu8i;TrustServerCertificate=True;MultipleActiveResultSets=true;"
     }
 }
