--- a/CourseManagement/appsettings.Development.json
+++ b/CourseManagement/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "DbConnection": "Server=.;Database=DB_CourseManagement;uid=sa;password=HieuLT1996;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+        "DbConnection": "Server=.;Database=DB_CourseManagement;uid=sa;password=Mylan@2022;TrustServerCertificate=True;MultipleActiveResultSets=true;"
     }
 }
