--- a/CourseManagement/CourseManagement.csproj
+++ b/CourseManagement/CourseManagement.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\CourseManagement.Domain\CourseManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contents\" />
+  </ItemGroup>
+
 </Project>
